--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.csory">
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
@@ -12,6 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Csory">
         <activity
+            android:name=".discriminationActivity"
+            android:exported="false" />
+        <activity
             android:name=".voiceActivity"
             android:exported="false" />
         <activity
@@ -21,8 +25,6 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-
-
             </intent-filter>
         </activity>
     </application>
