--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:allowBackup="true"
         android:icon="@drawable/kakao"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/kakao"
+        android:roundIcon="@drawable/white"
         android:supportsRtl="true"
         android:theme="@style/Theme.Csory">
 
