--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:roundIcon="@drawable/white"
         android:supportsRtl="true"
         android:theme="@style/Theme.Csory">
-
+        <activity
+            android:name=".InformationActivity"
+            android:exported="false" />
         <activity
             android:name=".ResultwordActivity"
             android:exported="false" />
@@ -67,7 +69,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
